<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/logphoto"
    tools:context=".log">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="text"
            android:layout_weight="6"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:layout_weight="6"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginVertical="20dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_a_new_account"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:textAlignment="gravity"
        android:textColor="#0000FF"/>


</LinearLayout>